--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					étudiante en <a href="https://formations.umontpellier.fr/fr/formations/but-bachelor-universitaire-de-technologie-BC/b-u-t-techniques-de-commercialisation-KK58V98F.html">BUT techniques de commercialisation</a> <br />
 					<a href="https://www.google.com/maps/dir//99+Av.+d'Occitanie,+34090+Montpellier/@43.6353058,3.7682689,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x12b6aec3fc4072d7:0x1a1585a408bcfed4!2m2!1d3.8506696!2d43.6353354?entry=ttu&g_ep=EgoyMDI1MTExMS4wIKXMDSoASAFQAw%3D%3D">à l'IUT de Montpellier</a>. <br />
 					
-					<a href="file:///Z:/template/html5up-strata/images/moncv.pdf">Voici mon CV</a>. <br/>
+					<a href="https://drive.google.com/file/d/1k8G1LR7z-Xpj0jnTLPs1n3xSOW6M0wSe/view?usp=drive_link">Voici mon CV</a>. <br/>
 					
-					<a href="file:///Z:/template/html5up-strata/images/LM.pdf"> Voici ma lettre de motivation</a>.</h1>
+					<a href="https://drive.google.com/file/d/1iFA7DH_-D0GJoMThvAaTI_RA728tSyAP/view?usp=drive_link"> Voici ma lettre de motivation</a>.</h1>
 				</div>
 			</header>
 
